--- a/docroot/views/view.xhtml
+++ b/docroot/views/view.xhtml
@@ -32,9 +32,18 @@
 									<h:outputText value="#{node}" />
 								</p:treeNode>
 								
-								<p:treeNode type="document" icon="ui-icon ui-icon-document">
+								<p:treeNode type="document" icon="ui-icon ui-icon-note">
 									<h:outputText value="#{node}"/>
 								</p:treeNode>
+								
+								<p:treeNode type="analysis" icon="ui-icon ui-icon-document">
+									<h:outputText value="#{node}"/>
+								</p:treeNode>
+								
+								<p:treeNode type="document_error" icon="ui-icon ui-icon-alert">
+									<h:outputText value="#{node}"/>
+								</p:treeNode>
+								
 							</p:tree>
 						</h:panelGroup>
 						<div class="nav">
