--- a/docroot/views/view.xhtml
+++ b/docroot/views/view.xhtml
@@ -14,10 +14,12 @@
 		<h:form id="formAnalyze">
 		
 			<h:panelGroup rendered="#{analyzeBacking.user != null}">
-			
+				
+				<p:remoteCommand name="treeToTable" actionListener="#{analyzeBacking.treeToTable}" update="availableStudy" oncomplete="initDragDrop()"/>
+				
 				<p:layout id="layoutAnalyze" style="width:100%;height:600px" >
 			
-					<p:layoutUnit styleClass="westpanel" position="west" header="Click folders or files to be Analyzed (Ctrl + Click to un-select)" resizable="true" size="385" minSize="385" maxSize="600" collapsible="true" >
+					<p:layoutUnit styleClass="westpanel" position="west" header="Drag and drop folders or files to be Analyzed" resizable="true" size="385" minSize="385" maxSize="600" collapsible="true" >
 	
 						<h:panelGroup layout="block" id="analyzeTreeHolder"	style="height:100%;overflow:auto">
 							<p:tree id="docTree" 
@@ -26,7 +28,10 @@
 								selectionMode="single"
 								value="#{analyzeBacking.fileTree.treeRoot}" 
 								var="node"
+								animate="true"
 								style="width:100%">
+								
+								<p:ajax event="expand" oncomplete="initDragDrop()" />  
 								
 								<p:treeNode expandedIcon="ui-icon-folder-open" collapsedIcon="ui-icon-folder-collapsed">
 									<h:outputText value="#{node}" />
@@ -46,15 +51,6 @@
 								
 							</p:tree>
 						</h:panelGroup>
-						<div class="nav">
-							<p:commandButton id="btnDisplay"
-								value="Click to Move Files To Analysis"
-								styleClass="displayButton"
-								update="availableStudy"
-								actionListener="#{analyzeBacking.displaySelectedMultiple}"
-								icon="ui-icon-disk"/>
-						</div>
-						
 					</p:layoutUnit>
 				
 					<p:layoutUnit position="center" header="Files to be Analyzed" >
@@ -69,24 +65,31 @@
 							
 						<p:dataTable id="availableStudy"
 							var="studyHolder"
+							rowIndexVar="index"
 							styleClass="analyzeDataTable"
 							sortMode="multiple"
 							rowKey="#{studyHolder.subjectId}"
 							value="#{analyzeBacking.tableList}"
 							resizableColumns="true"
 							paginatorPosition="top"
-							style="width:100%">
+							style="width:100%"
+							emptyMessage="No records. Drop yours files here!">
 		
-							<p:column headerText="Subject ID" >
+							<p:column headerText="Subject ID" width="40%">
 								<h:outputText value="#{studyHolder.content.title}" />
 							</p:column>
 		
-							<p:column headerText="File Format">
+							<p:column headerText="File Format" width="15%">
 								<h:outputText value="#{studyHolder.content.extension}" />
 							</p:column>
 		
-							<p:column headerText="File Date" >
+							<p:column headerText="File Date" width="35%">
 								<h:outputText value="#{studyHolder.content.createDate}" />
+							</p:column>
+							<p:column headerText="Remove" width="10%">
+								<p:commandLink styleClass="ui-icon ui-icon-close dataTableCentered" update="availableStudy" actionListener="#{analyzeBacking.removeTableItem}" oncomplete="initDragDrop()">
+									<f:param name="index" value="#{index}"/>
+								</p:commandLink>
 							</p:column>
 						</p:dataTable>
 						
@@ -122,6 +125,9 @@
 						</p:dataTable>
 					</p:layoutUnit>
 				</p:layout>
+				<script type="text/javascript">
+					initDragDrop();
+				</script>
 			</h:panelGroup>
 			
 			<h:panelGroup rendered="#{analyzeBacking.user == null}">
